--- a/src/style.module.css
+++ b/src/style.module.css
@@ -58,6 +58,10 @@
   margin-top: 3px;
 }
 
+.songArtist > span[data-rate-limited] {
+  color: #c1a841;
+}
+
 .entryShowMore {
   display: inline-block;
   cursor: pointer;
